tests/compile_errors/020-invalid-int-bin-literal.buzz
| '_' must be between digits
test "invalid bin literal" {
   int a = 0b_100;
}
